# agricultural-disease-diagnosis-ai

./: .gitignore  README.md
backend/: .env.example  pyproject.toml  requirements.txt
backend/app/: config.py  main.py
backend/app/agents/: __init__.py  base.py  diagnosis.py  economics_agent.py  evidence.py  market_agent.py  orchestrator.py  planner.py  rag_agent.py  report_agent.py  state.py  treatment_agent.py  vision.py  workflow.py
backend/app/api/: agents.py  diagnosis.py  health.py
backend/app/database/: engine.py  models.py
backend/app/llm/: __init__.py  openrouter.py
backend/app/models/: agent.py  common.py  diagnosis.py  llm.py
backend/app/rag/: __init__.py  chunker.py  embedder.py  index.py  loader.py  retriever.py
backend/app/services/: diagnosis_service.py  gemini_vision_service.py  openrouter_vision_service.py
backend/app/utils/: exceptions.py  logger.py
backend/data/documents/: banana_panama_disease.md  chickpea_wilt.md  citrus_canker.md  cotton_boll_rot.md  early_blight.md  groundnut_leaf_spot.md  late_blight.md  leaf_blast.md  mango_anthracnose.md  northern_corn_leaf_blight.md  septoria_leaf_spot.md  sheath_blight.md  soybean_rust.md  sugarcane_red_rot.md
backend/data/faiss_index/: chunks.json  index.faiss  manifest.json
backend/migrations/: env.py
backend/migrations/versions/: 5d05b0dcd086_initial_schema.py
backend/tests/: conftest.py  test_agents.py  test_api.py  test_base_agent.py  test_database.py  test_economics_market.py  test_openrouter_client.py  test_rag.py  test_treatment_agents.py
frontend/: package-lock.json  (+3 more)
(+29 files in other folders)
